// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-media-by-id-referenced-by should get documents that reference a specific media item 1`] = `
{
  "content": [
    {
      "text": "{"total":1,"items":[{"$type":"DocumentReferenceResponseModel","published":false,"documentType":{"id":"00000000-0000-0000-0000-000000000000","icon":"icon-document","alias":"testdoctypewithmediaref","name":"_Test DocType With Media Ref"},"variants":[{"state":"Draft","name":"_Test Document With Media Ref","culture":null}],"id":"00000000-0000-0000-0000-000000000000","name":"_Test Document With Media Ref"}]}",
      "type": "text",
    },
  ],
}
`;

exports[`get-media-by-id-referenced-by should handle non-existent media ID 1`] = `
{
  "content": [
    {
      "text": "{"total":0,"items":[]}",
      "type": "text",
    },
  ],
}
`;

exports[`get-media-by-id-referenced-by should return empty result when media has no references 1`] = `
{
  "content": [
    {
      "text": "{"total":0,"items":[]}",
      "type": "text",
    },
  ],
}
`;
